[gd_scene load_steps=4 format=3 uid="uid://b00n7rc3wmigr"]

[ext_resource type="Script" path="res://Scripts/Enemies/enemy_shot.gd" id="1_hd8j6"]
[ext_resource type="Texture2D" uid="uid://b2turojsjci7x" path="res://Assets/Items/Weapons/Projectiles/3x3Pellets.png" id="1_ht73m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxk15"]
size = Vector2(3, 3)

[node name="EnemyShot" type="Area2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_hd8j6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_jxk15")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ht73m")
offset = Vector2(0, -0.5)
hframes = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
